Apache Tez Change Log
=====================


Release 0.7.0: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2176. Move all logging to slf4j. (commons-logging jar no longer part of Tez tar)
  TEZ-1993. Implement a pluggable InputSizeEstimator for grouping fairly

ALL CHANGES:
  TEZ-1969. Stop the DAGAppMaster when a local mode client is stopped
  TEZ-714. OutputCommitters should not run in the main AM dispatcher thread
  TEZ-2323. Fix TestOrderedWordcount to use MR memory configs.
  TEZ-1482. Fix memory issues for Local Mode running concurrent tasks
  TEZ-2033. Update TestOrderedWordCount to add processor configs as history text
  and use MR configs correctly
  TEZ-2318. Tez UI: source and sink page is broken as they are not populated.
  TEZ-2016. Tez UI: Dag View Fit and Finish
  TEZ-2252. Tez UI: in graphical view some of the sinks are hidden as they overlap
  TEZ-2275. Tez UI: enable faster loading and caching of data in tables
  TEZ-2234. Add API for statistics information - allow vertex managers to get
  output size per source vertex
  TEZ-2274. Tez UI: full data loading, client side search and sort for other pages
  TEZ-2301. Switch Tez Pre-commit builds to use tezqa user.
  TEZ-2299. Invalid dag creation in MRRSleepJob post TEZ-2293.
  TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher.
  TEZ-2233. Allow EdgeProperty of an edge to be changed by VertexManager
  TEZ-2293. When running in "mr" mode, always use MR config settings.
  TEZ-2273. Tez UI: Support client side searching & sorting for dag tasks page
  TEZ-2223. TestMockDAGAppMaster fails due to TEZ-2210 on mac.
  TEZ-2236. Tez UI: Support loading of all tasks in the dag tasks page
  TEZ-2159. Tez UI: download timeline data for offline use.
  TEZ-2269. DAGAppMaster becomes unresponsive (post TEZ-2149).
  TEZ-2243. documentation should explicitly specify protobuf 2.5.0.
  TEZ-2232. Allow setParallelism to be called multiple times before tasks get
  scheduled