@@ -30,18 +30,60 @@ import static org.mockito.Mockito.verify;
 import java.util.EnumSet;
 import java.util.Iterator;
 import java.util.List;
-
+import java.util.concurrent.atomic.AtomicInteger;
 import com.google.common.collect.Lists;
+
 import org.apache.tez.dag.api.TezUncheckedException;
 import org.apache.tez.dag.api.event.VertexState;
 import org.apache.tez.dag.api.event.VertexStateUpdate;
 import org.apache.tez.dag.api.event.VertexStateUpdateParallelismUpdated;
 import org.apache.tez.dag.records.TezDAGID;
 import org.apache.tez.dag.records.TezVertexID;
+import org.junit.Assert;
 import org.junit.Test;
 import org.mockito.ArgumentCaptor;
 
 public class TestStateChangeNotifier {
+  
+  // uses the thread based notification code path but effectively blocks update
+  // events till listeners have been notified
+  public static class StateChangeNotifierForTest extends StateChangeNotifier {
+    AtomicInteger count = new AtomicInteger(0);
+    AtomicInteger totalCount = new AtomicInteger(0);
+    
+    public StateChangeNotifierForTest(DAG dag) {
+      super(dag);
+    }
+
+    public void reset() {
+      count.set(0);
+      totalCount.set(0);
+    }
+    
+    @Override
+    protected void processedEventFromQueue() {
+      synchronized (count) {
+        if (count.decrementAndGet() == 0) {
+          count.notifyAll();
+        }
+      }
+    }
+    
+    @Override
+    protected void addedEventToQueue() {
+      totalCount.incrementAndGet();
+      synchronized (count) {
+        // processing may finish by the time we get here
+        if (count.incrementAndGet() > 0) {
+          try {
+            count.wait();
+          } catch (InterruptedException e) {
+            e.printStackTrace();
+          }
+        }
+      }
+    }
+  }
 
   @Test(timeout = 5000)
   public void testEventsOnRegistration() {
@@ -51,7 +93,7 @@ public class TestStateChangeNotifier {
     Vertex v3 = createMockVertex(dagId, 3);
     DAG dag = createMockDag(dagId, v1, v2, v3);
 
-    StateChangeNotifier tracker = new StateChangeNotifier(dag);
+    StateChangeNotifierForTest tracker = new StateChangeNotifierForTest(dag);
 
     // Vertex has sent one event
     notifyTracker(tracker, v1, VertexState.RUNNING);
@@ -72,7 +114,6 @@ public class TestStateChangeNotifier {
         VertexState.SUCCEEDED), mockListener14);
     ArgumentCaptor<VertexStateUpdate> argumentCaptor =
         ArgumentCaptor.forClass(VertexStateUpdate.class);
-
     verify(mockListener11, times(1)).onStateUpdated(argumentCaptor.capture());
     assertEquals(VertexState.RUNNING,
         argumentCaptor.getValue().getVertexState());
@@ -85,8 +126,10 @@ public class TestStateChangeNotifier {
     verify(mockListener14, never()).onStateUpdated(any(VertexStateUpdate.class));
 
     // Vertex has not notified of state
+    tracker.reset();
     VertexStateUpdateListener mockListener2 = mock(VertexStateUpdateListener.class);
     tracker.registerForVertexUpdates(v2.getName(), null, mockListener2);
+    Assert.assertEquals(0, tracker.totalCount.get()); // there should no be any event sent out
     verify(mockListener2, never()).onStateUpdated(any(VertexStateUpdate.class));
 
     // Vertex has notified about parallelism update only
@@ -104,7 +147,7 @@ public class TestStateChangeNotifier {
     Vertex v1 = createMockVertex(dagId, 1);
     DAG dag = createMockDag(dagId, v1);
 
-    StateChangeNotifier tracker = new StateChangeNotifier(dag);
+    StateChangeNotifierForTest tracker = new StateChangeNotifierForTest(dag);
 
     VertexStateUpdateListener mockListener = mock(VertexStateUpdateListener.class);
     tracker.registerForVertexUpdates(v1.getName(), null, mockListener);
@@ -139,7 +182,7 @@ public class TestStateChangeNotifier {
     Vertex v1 = createMockVertex(dagId, 1);
     DAG dag = createMockDag(dagId, v1);
 
-    StateChangeNotifier tracker = new StateChangeNotifier(dag);
+    StateChangeNotifierForTest tracker = new StateChangeNotifierForTest(dag);
     VertexStateUpdateListener mockListener = mock(VertexStateUpdateListener.class);
 
     tracker.registerForVertexUpdates(v1.getName(), null, mockListener);
@@ -157,7 +200,7 @@ public class TestStateChangeNotifier {
     Vertex v1 = createMockVertex(dagId, 1);
     DAG dag = createMockDag(dagId, v1);
 
-    StateChangeNotifier tracker = new StateChangeNotifier(dag);
+    StateChangeNotifierForTest tracker = new StateChangeNotifierForTest(dag);
 
     VertexStateUpdateListener mockListener = mock(VertexStateUpdateListener.class);
     tracker.registerForVertexUpdates(v1.getName(), EnumSet.of(
@@ -199,7 +242,7 @@ public class TestStateChangeNotifier {
     Vertex v1 = createMockVertex(dagId, 1);
     DAG dag = createMockDag(dagId, v1);
 
-    StateChangeNotifier tracker = new StateChangeNotifier(dag);
+    StateChangeNotifierForTest tracker = new StateChangeNotifierForTest(dag);
 
     VertexStateUpdateListener mockListener = mock(VertexStateUpdateListener.class);
     tracker.registerForVertexUpdates(v1.getName(), null, mockListener);
